# Data-Structures-and-Algorithms-with-the-CPP-STL

./: .clang-format  CMakeLists.txt  README.md
chapter01/: 01_cstylearray.cpp  02_stdvector.cpp  03_cstylearray.cpp  04_stdvector.cpp  05_initializingvector.cpp  06_randomaccess.cpp  07_outofrange.cpp  08_firstandlast.cpp  09_vectorsize.cpp  10_pushback.cpp  11_insert.cpp  12_emplace.cpp  13_capacity.cpp  14_clear.cpp
chapter02/: 01_inputiterator.cpp  02_outputiterator.cpp  03_forwarditerator.cpp  04_bidirectionaliterator.cpp  05_randomaccessiterator.cpp  06_nonmemberbeginend.cpp  07_squareiterator.cpp  08_alphaiterator.cpp
chapter03/: 01_sizevscapacity.cpp  02_resizevscapacity.cpp  03_reserve.cpp  04_shrinktofit.cpp  05_customallocator.cpp  06_customallocator2.cpp
chapter04/: 01_customsort.cpp  02_invalidrange.cpp  03_lowerboundupperbound.cpp  04_playlist.cpp  05_iteratorinvalidation.cpp  06_iteratorinvalidation2.cpp  07_iteratorinvalidationthreaded.cpp
chapter06/: 01_array.cpp  02_vector.cpp  03_vector_bool.cpp  04_deque.cpp  05_list.cpp  06_forward_list.cpp  06_string.cpp
chapter07/: 01_set.cpp  02_map.cpp  03_multiset.cpp  04_multimap.cpp
chapter08/: 01_unordered_set.cpp  02_unordered_map.cpp  03_unordered_multiset.cpp  04_unordered_multimap.cpp
chapter09/: 01_stack.cpp  02_queue.cpp  03_priority_queue.cpp
chapter10/: 01_span.cpp
chapter11/: 01_allnoneany_of.cpp  02_is_sorted.cpp  03_count.cpp  04_find_if.cpp  05_upperlower_bound.cpp  06_adjacent_find.cpp  07_lexicographical_compare.cpp  08_minmax_element.cpp
chapter12/: 01_badmovesemantics.cpp  02_rvo.cpp  03_replace.cpp
chapter13/: 01_itoa.cpp  02_accumulate.cpp  03_adjacentdifference.cpp  04_parallelsum.cpp  05_parallelreduce.cpp  06_sortedranges.cpp
chapter15/: 01_ranges.cpp  02_chaining.cpp
chapter16/: 01_errorhandling.cpp  02_exceptionsafety.cpp  03_customiterator.cpp  04_operatoroverloading.cpp  05_customhash.cpp
chapter17/: 01_sfinaeenableif.cpp  02_decorator.cpp  03_lambdas.cpp
chapter18/: 01_comparisonpolicies.cpp  01_typetraits.cpp  02_hasserialize.cpp  03_sortingpolicy.cpp  04_hashtablepolicies.cpp
chapter19/: 01_strongguarantees.cpp
chapter20/: 01_concurrencypitfalls.cpp  01_racecondition.cpp  02_threadasyncfuture.cpp  03_bestpractices.cpp  04_bestpractices.cpp
chapter21/: 01_concepts.cpp  02_customconcept.cpp  03_coroutines.cpp
chapter22/: 01_constexpr.cpp
